Changelog
=========


1.10.1 (unreleased)
-------------------

- Fix test: test_object_providing_interface_updates_catalog: Asks catalog instead of index (query lazyness) [tarnap]
- Fix dexterity image builder [tarnap]


1.10.0 (2017-03-01)
-------------------

- Add "ticking_creator", ticking a frozen clock. [jone]


1.9.0 (2016-09-19)
------------------

- Add ".with_property" method to content builders. [jone]


1.8.1 (2016-06-30)
------------------

- Fix plone.app.dexterity dependency in order to better support Plone 4.2. [jone]


1.8.0 (2016-06-29)
------------------

- Add content manager for switching to AT / DX content builders. [jone]

- Require dexterity. [jone]


1.7.5 (2016-05-26)
------------------

- DX: Bind zope.schema fields when determining default values in order to
  have a context (i.e. container) to pass to an IContextAwareDefaultFactory.
  [lgraf]


1.7.4 (2016-03-30)
------------------

- Fix setting values for dexterity-readonly fields.
  [elioschmutz]

- Fix encoding problem when creating AT blobs. [jone]


1.7.3 (2015-12-11)
------------------

- UserBuilder: add method to create a user within specified groups.
  [deiferni]


1.7.2 (2015-09-30)
------------------

- DX-Builder: Initialize attributes only with set_field_values.
  No longer pass all arguments to createContent to avoid setting fields that
  are stored in annotations as attributes as well.
  [deiferni]


1.7.1 (2015-08-20)
------------------

- Add conditional import for Relationvalues since we don't always have z3c.relation.
  [tschanzt]


1.7.0 (2015-08-20)
------------------

- Automatically create relation-values from plone content-types while setting field-values.
  [deiferni]

- Add support for building portlets.
  [mbaechtold]


1.6.3 (2015-05-28)
------------------

- Genericsetup builder: fix error when creating same folder multiple times.
  [jone]


1.6.2 (2015-05-20)
------------------

- Package builder: make package version configurable.
  [jone]

